--- a/app/src/main/res/layout/alert_di_recy.xml
+++ b/app/src/main/res/layout/alert_di_recy.xml
@@ -10,9 +10,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
         android:background="?attr/backgroundcolor"
         android:padding="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,7 +20,7 @@
 
         <TextView
             android:id="@+id/tv_titulo"
-            android:layout_width="350dp"
+            android:layout_width="351dp"
             android:layout_height="40dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
@@ -102,7 +100,7 @@
             android:background="@drawable/shapelogin"
             android:padding="15dp"
             android:shadowColor="?attr/textColor"
-            android:text="Insertar"
+            android:text="Volver"
             android:textAlignment="center"
             android:textColor="@color/colorPrimaryLight"
             app:layout_constraintEnd_toEndOf="parent"
