--- a/app/src/main/res/layout/rv_vista_user.xml
+++ b/app/src/main/res/layout/rv_vista_user.xml
@@ -2,40 +2,45 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/const_lay_user"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/backgroundcolor">
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/const_lay_user"
-        android:layout_width="405dp"
-        android:layout_height="81dp"
-        android:layout_marginStart="8dp"
-        android:background="?attr/backgroundcolor"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+    <TextView
+        android:id="@+id/tv_titulo"
+        android:layout_width="180dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="4dp"
+        android:text="TextView"
+        android:textColor="?attr/textColor"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_titulo"
-            android:layout_width="180dp"
-            android:layout_height="37dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="24dp"
-            android:text="TextView"
-            android:textColor="?attr/textColor"
-            android:textSize="24sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/tv_audios_creados"
+        android:layout_width="63dp"
+        android:layout_height="31dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:textColor="@color/colorAccent"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/guideline22"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_audios_creados"
-            android:layout_width="63dp"
-            android:layout_height="31dp"
-            android:layout_marginEnd="36dp"
-            android:layout_marginBottom="16dp"
-            android:textColor="@color/colorAccent"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-    </android.support.constraint.ConstraintLayout>
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline21"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="5dp" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline22"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="405dp" />
+
 </android.support.constraint.ConstraintLayout>
