--- a/app/src/main/res/layout/rv_vista_user.xml
+++ b/app/src/main/res/layout/rv_vista_user.xml
@@ -24,7 +24,7 @@
         android:layout_height="31dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
-        android:textColor="@color/colorAccent"
+        android:textColor="?attr/textColor"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline22"
         app:layout_constraintTop_toTopOf="parent" />
