--- a/app/src/main/res/layout/fragment_buscar.xml
+++ b/app/src/main/res/layout/fragment_buscar.xml
@@ -55,8 +55,8 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_usuarios"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="381dp"
+        android:layout_height="437dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
