commit arreglo vistas

--- a/app/src/main/res/layout/rv_vista_add.xml
+++ b/app/src/main/res/layout/rv_vista_add.xml
@@ -5,6 +5,7 @@
     android:id="@+id/constraint_lay"
     android:layout_width="match_parent"
     android:layout_height="100dp"
+    android:layout_margin="20dp"
     android:background="?attr/backgroundcolor">
 
 
@@ -37,14 +38,26 @@
 
         <ImageButton
             android:id="@+id/btn_play"
-            android:layout_width="106dp"
-            android:layout_height="79dp"
-            android:layout_marginStart="300dp"
+            android:layout_width="61dp"
+            android:layout_height="67dp"
+            android:layout_marginStart="12dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:background="?attr/backgroundcolor"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.922"
+            app:layout_constraintStart_toStartOf="@+id/guideline23"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_play_arrow_black_24dp" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline23"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.50" />
 
 
 </android.support.constraint.ConstraintLayout>
