--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -3,22 +3,22 @@
     <item
         android:id="@+id/principal"
         android:icon="@drawable/jaguar"
-        android:title="Principal" />
+        android:title="Home" />
 
     <item
         android:id="@+id/creados"
         android:icon="@drawable/ic_search_black_24dp"
 
-        android:title="Creados" />
+        android:title="Buscar" />
 
     <item
         android:id="@+id/asistencia"
         android:icon="@drawable/ic_add_location_black_24dp"
-        android:title="Guardados" />
+        android:title="Crear" />
     <item
         android:id="@+id/anadir"
         android:icon="@drawable/ic_map_black_24dp"
-        android:title="Guardados" />
+        android:title="Mapa" />
 
 
 </menu>
