--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -10,8 +10,8 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_home"
-        android:layout_width="wrap_content"
-        android:layout_height="717dp"
+        android:layout_width="391dp"
+        android:layout_height="713dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
